welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
	(((outsideMode)&&(n<=1&&n>=10))||(!outsidemode)&&(n>=1&&n<=10))
}